# plugins-rs

./: Cargo.toml  LICENSE  README.md  build.rs  build_exts.rs  makefile
examples/: base.rs
examples/javascript/embed/test/: index.ts
examples/javascript/embed/test1/: index.ts
examples/javascript/main/: api.d.ts  index.ts  plugin.json
examples/javascript/plugins/: test.tar.xz  test1.tar.xz
examples/javascript/static/test/: index.ts
examples/javascript/static/test1/: index.ts  plugin.json
src/: archive.rs  errors.rs  lib.rs  loader.rs  types.rs
src/api/: index.d.ts  index.js
src/core/: dirs.rs  fix.rs  internal.js  mod.rs
src/extensions/: mod.rs
src/extensions/capture/: graphics_capture.rs  mod.rs
src/extensions/media/: internal.js  mod.rs
src/extensions/pty/: example.rs  mod.rs
src/extensions/scrape/: internal.js  mod.rs
src/extensions/ws/: mod.rs
